--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --host",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview"
@@ -15,6 +15,7 @@
         "html2canvas": "^1.4.1",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-ga4": "^2.1.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.9.6",
         "swiper": "^12.0.3",
