--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "react-dom": "^19.2.0",
         "react-ga4": "^2.1.0",
         "react-google-recaptcha-v3": "^1.11.0",
+        "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.9.6",
         "swiper": "^12.0.3",
