--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,22 @@
 {
-    "rewrites": [
+  "headers": [
+    {
+      "source": "/(.*).html",
+      "headers": [
         {
-            "source": "/(.*)",
-            "destination": "/index.html"
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
         }
-    ]
+      ]
+    },
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ]
 }
