--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "axios": "^1.13.2",
         "framer-motion": "^12.23.24",
         "html2canvas": "^1.4.1",
+        "jspdf": "^4.1.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-ga4": "^2.1.0",
